update cms config with new url

--- a/app/admin/config.njk
+++ b/app/admin/config.njk
@@ -3,7 +3,7 @@ layout: false
 permalink: admin/config.yml
 eleventyExcludeFromCollections: true
 ---
-{% set siteDisplayURL = "http://localhost:8080" if app.isENVDev else "https://digital-land-design.netlify.app" %}
+{% set siteDisplayURL = "http://localhost:8080" if app.isENVDev else "https://design-history.planning-data.dev/" %}
 # where are the files hosted
 backend:
   name: github
