change to local netlify-cms

--- a/app/admin/admin.njk
+++ b/app/admin/admin.njk
@@ -9,8 +9,8 @@ eleventyExcludeFromCollections: true
   <title>DLUHC - CMS</title>
 </head>
 <body>
-  {# <script type="module" src="/assets/javascripts/netlify-cms/netlify-cms.js"></script> #}
-  <script type="module" src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  <script type="module" src="/assets/javascripts/netlify-cms/netlify-cms.js"></script>
+  {# <script type="module" src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script> #}
   <!-- fixes the jump to the end bug in netlify cms -->
   <style>[data-slate-editor] { -webkit-user-modify: read-write !important; }
 </style>
